<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jenzz.materialpreference.PreferenceCategory
        android:title="@string/theme_settings" />

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Theme"
            android:title="@string/theme_toolbar_title"
            android:summary="@string/theme_toolbar_summary"
            android:defaultValue="@color/primary"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="NavBarTheme"
            android:title="@string/theme_navbar_title"
            android:summary="@string/theme_navbar_summary"
            android:defaultValue="@color/primary"
            app:supportsAlpha="true"/>

        <com.jenzz.materialpreference.SwitchPreference
            android:key="NavigationTint"
            android:title="@string/theme_navbar_tint_title"
            android:summaryOn="@string/theme_disable_navbar_tint_summary"
            android:summaryOff="@string/theme_enable_navbar_tint_summary"
            android:defaultValue="true" />

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Background"
            android:title="@string/theme_background_theme_title"
            android:summary="@string/theme_background_theme_summary"
            android:defaultValue="@color/navigation_drawer_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="PrimaryText"
            android:title="@string/theme_primary_text"
            android:summary="@string/theme_primary_text_summary"
            android:defaultValue="@color/primary"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="SecondaryText"
            android:title="@string/theme_secondary_text"
            android:summary="@string/theme_secondary_text_summary"
            android:defaultValue="@color/semitransparent_white"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Accent"
            android:title="@string/theme_accent"
            android:summary="@string/theme_accent_summary"
            android:defaultValue="@color/accent"/>

        <com.jenzz.materialpreference.PreferenceCategory
            android:title="@string/theme_material_drawer_settings" />

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="Drawer"
            android:title="@string/theme_drawer_theme_title"
            android:summary="@string/theme_drawer_theme_summary"
            android:defaultValue="@color/navigation_drawer_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="NormalIcon"
            android:title="@string/theme_drawer_normal_icon"
            android:defaultValue="@color/white"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="SelectedIcon"
            android:title="@string/theme_drawer_selected_icon"
            android:defaultValue="@color/primary"
            app:supportsAlpha="true"/>

        <com.jenzz.materialpreference.SwitchPreference
            android:key="@string/theme_dark_material_drawer_icons"
            android:title="@string/theme_dark_material_drawer_icons"
            android:summaryOn="@string/theme_dark_material_drawer_icons_enable"
            android:summaryOff="@string/theme_dark_material_drawer_icons_disable"
            android:defaultValue="false" />

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="DrawerText"
            android:title="@string/theme_drawer_text_theme_title"
            android:summary="@string/theme_drawer_text_theme_summary"
            android:defaultValue="@color/white"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="SelectedDrawerText"
            android:title="@string/theme_drawer_selected_text_theme_title"
            android:summary="@string/theme_drawer_selected_text_theme_summary"
            android:defaultValue="@color/white"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="DrawerSelector"
            android:title="@string/theme_drawer_selector_theme_title"
            android:summary="@string/theme_drawer_selector_theme_summary"
            android:defaultValue="@color/selector_drawer_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="BadgeBackground"
            android:title="@string/theme_badge_background_theme_title"
            android:summary="@string/theme_badge_background_theme_summary"
            android:defaultValue="@color/primary"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="BadgeText"
            android:title="@string/theme_badge_text_theme_title"
            android:summary="@string/theme_badge_text_theme_summary"
            android:defaultValue="@color/white"
            app:supportsAlpha="true"/>

        <com.jenzz.materialpreference.PreferenceCategory
            android:title="@string/theme_wallpaper_fab_settings" />

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="FABapply"
            android:title="@string/theme_fab_apply"
            android:defaultValue="@color/apply_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="FABsave"
            android:title="@string/theme_fab_save"
            android:defaultValue="@color/save_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="FABcrop"
            android:title="@string/theme_fab_crop"
            android:defaultValue="@color/crop_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="FABedit"
            android:title="@string/theme_fab_edit"
            android:defaultValue="@color/edit_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="FABshare"
            android:title="@string/theme_fab_share"
            android:defaultValue="@color/share_color"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="FABpressed"
            android:title="@string/theme_fab_pressed"
            android:summary="@string/theme_fab_pressed_summary"
            android:defaultValue="@color/primary"
            app:supportsAlpha="true"/>

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="FABbackground"
            android:title="@string/theme_fab_background"
            android:summary="@string/theme_fab_background_summary"
            android:defaultValue="@color/black_semi_transparent"
            app:supportsAlpha="true"/>

</PreferenceScreen>
